--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
  Author:       Tenderling
  Author URI:   https://tenderling.com
  Template:     understrap
- Version:      1.1.04
+ Version:      1.1.06
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  understrap-child
+ Text Domain:  tenderling
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
  GitHub Theme URI: understrap/understrap-child
 */
