--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -8,3 +8,6 @@ $primary: $purple;  // Once we've changed the value, we'll also make it the prim
 
 
 $primary: #0C2939;
+$secondary: #A6BAC8;
+$border-radius: 0;
+$light: #ffffff;
