--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1,4 +1,8 @@
-body.admin-bar div#rinrose_header-expand {
-    top: 32px!important;
-    max-height: calc(100% - 32px)!important;
+body.admin-bar {
+    div#rinrose_header-expanded {
+        top: 32px!important;
+    }
+    div#rinrose_header-expand {
+        max-height: calc(100% - 32px)!important;
+    }
 }
