--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -11,3 +11,5 @@ $primary: #0C2939;
 $secondary: #A6BAC8;
 $border-radius: 0;
 $light: #ffffff;
+$navbar-dark-toggler-border-color: transparent;
+$navbar-light-toggler-border-color: transparent;
