--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -13,3 +13,9 @@ $border-radius: 0;
 $light: #ffffff;
 $navbar-dark-toggler-border-color: transparent;
 $navbar-light-toggler-border-color: transparent;
+$navbar-dark-color: $light;
+$navbar-dark-hover-color: rgba($light, .55);
+$navbar-dark-active-color: rgba($light, .55);
+$navbar-light-color: $primary;
+$navbar-light-hover-color: rgba($primary, .7);
+$navbar-light-active-color:rgba($primary, .55);
