account for admin bar

--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -2,10 +2,7 @@ div#rinrose_header-expand {
     height: 100vh!important;
 }
 body.admin-bar {
-    div#rinrose_header-expanded {
+    div#rinrose_header {
         top: 32px!important;
-    }
-    div#rinrose_header-expand {
-        max-height: calc(100vh - 32px)!important;
     }
 }
