--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15602,11 +15602,8 @@ div#rinrose_header-expand {
   height: 100vh !important;
 }
 
-body.admin-bar div#rinrose_header-expanded {
+body.admin-bar div#rinrose_header {
   top: 32px !important;
-}
-body.admin-bar div#rinrose_header-expand {
-  max-height: calc(100vh - 32px) !important;
 }
 
 .has-blue-color,
