--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15598,11 +15598,7 @@ figure.woocommerce-product-gallery__wrapper {
   display: block;
 }
 
-div#rinrose_header-expand {
-  height: 100vh !important;
-}
-
-body.admin-bar div#rinrose_header {
+.admin-bar #rinrose_header {
   top: 32px !important;
 }
 
