--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1,8 +1,5 @@
-div#rinrose_header-expand {
-    height: 100vh!important;
-}
-body.admin-bar {
-    div#rinrose_header {
+.admin-bar {
+    #rinrose_header {
         top: 32px!important;
     }
 }
