--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -2,4 +2,7 @@
     #rinrose_header {
         top: 32px!important;
     }
+    #rinrose_header-offcanvas_header {
+        margin-top: 32px!important;
+    }
 }
