full height offcanvas

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15598,11 +15598,16 @@ figure.woocommerce-product-gallery__wrapper {
   display: block;
 }
 
+#rinrose_header-offcanvas_content {
+  height: 100vh;
+}
+
 .admin-bar #rinrose_header {
   top: 32px !important;
 }
-.admin-bar #rinrose_header-offcanvas_header {
+.admin-bar #rinrose_header-offcanvas_content {
   margin-top: 32px !important;
+  max-height: calc(100vh - 32px) !important;
 }
 
 .has-blue-color,
