--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -6456,7 +6456,7 @@ textarea.form-control-lg {
 }
 
 .btn-close-white {
-  filter: invert(1) grayscale(100%) brightness(200%);
+  filter: invert(1) grayscale(0) brightness(200%);
 }
 
 .toast {
@@ -7379,7 +7379,7 @@ textarea.form-control-lg {
   top: 0;
   right: 0;
   left: 0;
-  height: 30vh;
+  height: 100vh;
   max-height: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   transform: translateY(-100%);
@@ -7388,7 +7388,7 @@ textarea.form-control-lg {
 .offcanvas-bottom {
   right: 0;
   left: 0;
-  height: 30vh;
+  height: 100vh;
   max-height: 100%;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   transform: translateY(100%);
@@ -15598,14 +15598,10 @@ figure.woocommerce-product-gallery__wrapper {
   display: block;
 }
 
-#rinrose_header-offcanvas_content {
-  height: 100vh;
-}
-
 .admin-bar #rinrose_header {
   top: 32px !important;
 }
-.admin-bar #rinrose_header-offcanvas_content {
+.admin-bar #rinrose_header-offcanvas {
   margin-top: 32px !important;
   max-height: calc(100vh - 32px) !important;
 }
