--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -19,3 +19,5 @@ $navbar-dark-active-color: rgba($light, .55);
 $navbar-light-color: $primary;
 $navbar-light-hover-color: rgba($primary, .7);
 $navbar-light-active-color:rgba($primary, .55);
+$offcanvas-vertical-height: 100vh;
+$btn-close-white-filter: invert(1) grayscale(0) brightness(200%);
