--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -21,3 +21,4 @@ $navbar-light-hover-color: rgba($primary, .7);
 $navbar-light-active-color:rgba($primary, .55);
 $offcanvas-vertical-height: 100vh;
 $btn-close-white-filter: invert(1) grayscale(0) brightness(200%);
+$font-family-base: 'Montserrat', sans-serif;
