--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -20,5 +20,7 @@ $navbar-light-color: $primary;
 $navbar-light-hover-color: rgba($primary, .7);
 $navbar-light-active-color:rgba($primary, .55);
 $offcanvas-vertical-height: 100vh;
-$btn-close-white-filter: invert(1) grayscale(0) brightness(200%);
+$btn-close-opacity: 1;
+$btn-close-hover-opacity: .5;
+$btn-close-padding-x: .45em;
 $font-family-base: 'Montserrat', sans-serif;
