--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -7,3 +7,7 @@
         max-height: calc(100vh - 32px)!important;
     }
 }
+.btn-close {
+    border: 1px solid $black;
+    border-radius: 50%;
+}
