--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -6427,11 +6427,11 @@ textarea.form-control-lg {
 
 .btn-close {
   box-sizing: content-box;
-  width: 1em;
-  height: 1em;
-  padding: 0.45em 0.45em;
+  width: 50px;
+  height: 50px;
+  padding: 0 0;
   color: #000000;
-  background: transparent url("data:image/svg+xml,%3csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='25' cy='25' r='24.5' stroke='%23000000' /%3e%3cpath d='M14 36.5L35.5 15' stroke='%23000000'/%3e%3cpath d='M14 36.5L35.5 15' stroke='%23000000' /%3e%3cpath d='M14 15L35.5 36.5' stroke='%23000000'/%3e%3cpath d='M14 15L35.5 36.5' stroke='%23000000' /%3e%3c/svg%3e") center/1em auto no-repeat;
+  background: transparent url("data:image/svg+xml,%3csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='25' cy='25' r='24.5' stroke='%23000000' /%3e%3cpath d='M14 36.5L35.5 15' stroke='%23000000'/%3e%3cpath d='M14 36.5L35.5 15' stroke='%23000000' /%3e%3cpath d='M14 15L35.5 36.5' stroke='%23000000'/%3e%3cpath d='M14 15L35.5 36.5' stroke='%23000000' /%3e%3c/svg%3e") center/50px auto no-repeat;
   border: 0;
   border-radius: 0;
   opacity: 1;
