--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -26,7 +26,8 @@ $navbar-light-active-color:rgba($primary, .55);
 $offcanvas-vertical-height: 100vh;
 $btn-close-opacity: 1;
 $btn-close-hover-opacity: .5;
-$btn-close-padding-x: .45em;
+$btn-close-padding-x: 0;
+$btn-close-width: 50px;
 $btn-close-color: $black;
 $btn-close-bg: url("data:image/svg+xml,<svg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'><circle cx='25' cy='25' r='24.5' stroke='#{$btn-close-color}' /><path d='M14 36.5L35.5 15' stroke='#{$btn-close-color}'/><path d='M14 36.5L35.5 15' stroke='#{$btn-close-color}' /><path d='M14 15L35.5 36.5' stroke='#{$btn-close-color}'/><path d='M14 15L35.5 36.5' stroke='#{$btn-close-color}' /></svg>");
 
