--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -32,5 +32,6 @@ $btn-close-color: $black;
 $btn-close-bg: url("data:image/svg+xml,<svg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'><circle cx='25' cy='25' r='24.5' stroke='#{$btn-close-color}' /><path d='M14 36.5L35.5 15' stroke='#{$btn-close-color}'/><path d='M14 36.5L35.5 15' stroke='#{$btn-close-color}' /><path d='M14 15L35.5 36.5' stroke='#{$btn-close-color}'/><path d='M14 15L35.5 36.5' stroke='#{$btn-close-color}' /></svg>");
 $btn-border-width: 1px;
 $btn-font-size: 14px;
-$btn-padding-y: 1rem;
-
+$btn-padding-x: 1rem;
+$btn-font-weight: 
+$font-weight-normal: 500;
