font weight fix

--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -34,4 +34,4 @@ $btn-border-width: 1px;
 $btn-font-size: 14px;
 $btn-padding-x: 1rem;
 $btn-font-weight: 
-$font-weight-normal: 500;
+$btn-font-weight: 500;
