--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -13,3 +13,13 @@
 .btn-link {
   font-weight: $btn-font-weight;
 }
+ul#rinrose_header-offcanvas_body-nav_menu {
+    .menu-item {
+        a {
+            color: $white;
+            text-transform: uppercase;
+            font-weight: 400;
+            font-size: 43px;
+        }
+    }
+}
