--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -15,11 +15,15 @@
 }
 ul#rinrose_header-offcanvas_body-nav_menu {
     .menu-item {
+        padding: 40px;
+        
         a {
             color: $white;
             text-transform: uppercase;
             font-weight: 400;
             font-size: 43px;
+            text-decoration: none;
+            line-height: 52px;
         }
     }
 }
