--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15611,6 +15611,13 @@ figure.woocommerce-product-gallery__wrapper {
   padding-right: 5%;
 }
 
+#rinrose_header-offcanvas {
+  background-image: url(".../inc/img/rinrose-pattern-dark-desktop.svg");
+  background-size: cover;
+  background-position: cener;
+  background-repeat: no-repeat;
+}
+
 #wrapper-navbar {
   height: 127px;
 }
