--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -13,6 +13,12 @@
         padding-right: 5%;
     }
 }
+#rinrose_header-offcanvas {
+    background-image: url('.../inc/img/rinrose-pattern-dark-desktop.svg');
+    background-size: cover;
+    background-position: cener;
+    background-repeat: no-repeat;
+}
 #wrapper-navbar {
     height: 127px;
 }
