--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -14,7 +14,7 @@
     }
 }
 #rinrose_header-offcanvas {
-    background-image: url(...'/inc/img/rinrose-pattern-dark-desktop.svg');
+    background-image: url('/wp-content/themes/therinrose-tenderling/inc/img/rinrose-pattern-dark-desktop.svg');
     background-size: cover;
     background-position: cener;
     background-repeat: no-repeat;
