--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -29,8 +29,11 @@ $btn-close-hover-opacity: .5;
 $btn-close-padding-x: 0;
 $btn-close-width: 50px;
 $btn-close-color: $black;
-$btn-close-bg: url("data:image/svg+xml,<svg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'><circle cx='25' cy='25' r='24.5' stroke='#{$btn-close-color}' /><path d='M14 36.5L35.5 15' stroke='#{$btn-close-color}'/><path d='M14 36.5L35.5 15' stroke='#{$btn-close-color}' /><path d='M14 15L35.5 36.5' stroke='#{$btn-close-color}'/><path d='M14 15L35.5 36.5' stroke='#{$btn-close-color}' /></svg>");
+$btn-close-bg: url("data:image/svg+xml,<svg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M15 37.5L36.5 16M15 16L36.5 37.5M51 26C51 39.8071 39.8071 51 26 51C12.1929 51 1 39.8071 1 26C1 12.1929 12.1929 1 26 1C39.8071 1 51 12.1929 51 26Z' stroke='#{$btn-close-color}' stroke-width='2'/><path d='M15 37.5L36.5 16M15 16L36.5 37.5M51 26C51 39.8071 39.8071 51 26 51C12.1929 51 1 39.8071 1 26C1 12.1929 12.1929 1 26 1C39.8071 1 51 12.1929 51 26Z' stroke='#{$btn-close-color}' stroke-width='2'/></svg>");
 $btn-border-width: 1px;
 $btn-font-size: 14px;
 $btn-padding-x: 1rem;
 $btn-font-weight: 500;
+
+
+
