--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15614,7 +15614,7 @@ figure.woocommerce-product-gallery__wrapper {
 #rinrose_header-offcanvas {
   background-image: url("/wp-content/themes/therinrose-tenderling/inc/img/rinrose-pattern-dark-desktop.svg");
   background-size: cover;
-  background-position: cener;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
