--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -16,7 +16,7 @@
 #rinrose_header-offcanvas {
     background-image: url('/wp-content/themes/therinrose-tenderling/inc/img/rinrose-pattern-dark-desktop.svg');
     background-size: cover;
-    background-position: cener;
+    background-position: center;
     background-repeat: no-repeat;
 }
 #wrapper-navbar {
