--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -25,6 +25,9 @@
 .btn-link {
   font-weight: $btn-font-weight;
 }
+.wrapper {
+    padding: 0;
+}
 ul#rinrose_header-offcanvas_body-nav {
     .menu-item {
         padding: 40px;
