--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1,3 +1,16 @@
+#rinrose_home-splash {
+    height: calc(100vh - 127px);
+    position: relative;
+}
+#rinrose_home-splash_video {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translateY(-50%);
+}
+
 .admin-bar {
     #rinrose_header {
         top: 32px!important;
@@ -5,6 +18,9 @@
     #rinrose_header-offcanvas {
         margin-top: 32px!important;
         max-height: calc(100vh - 32px)!important;
+    }
+    #rinrose_home-splash {
+        height: calc(100vh - 159px);
     }
 }
 #rinrose_header {
