--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -7,6 +7,8 @@ $purple: #5533ff; // Thats a sample how you could change a BootStrap variable.
 $primary: $purple;  // Once we've changed the value, we'll also make it the primary brand color.
 
 $font-family-base: 'Montserrat', sans-serif;
+$display-font-weight: 400;
+
 $rinrose: #0C2939;
 $rinrose_2: #A6BAC8;
 $primary: $rinrose;
@@ -15,6 +17,7 @@ $border-radius: 0;
 $white: #ffffff;
 $light: $white;
 $black: #000000;
+
 $navbar-dark-toggler-border-color: transparent;
 $navbar-light-toggler-border-color: transparent;
 $navbar-dark-color: $light;
@@ -23,13 +26,16 @@ $navbar-dark-active-color: rgba($light, .55);
 $navbar-light-color: $primary;
 $navbar-light-hover-color: rgba($primary, .7);
 $navbar-light-active-color:rgba($primary, .55);
+
 $offcanvas-vertical-height: 100vh;
+
 $btn-close-opacity: 1;
 $btn-close-hover-opacity: .5;
 $btn-close-padding-x: 0;
 $btn-close-width: 50px;
 $btn-close-color: $black;
 $btn-close-bg: url("data:image/svg+xml,<svg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M15 37.5L36.5 16M15 16L36.5 37.5M51 26C51 39.8071 39.8071 51 26 51C12.1929 51 1 39.8071 1 26C1 12.1929 12.1929 1 26 1C39.8071 1 51 12.1929 51 26Z' stroke='#{$btn-close-color}' stroke-width='2'/><path d='M15 37.5L36.5 16M15 16L36.5 37.5M51 26C51 39.8071 39.8071 51 26 51C12.1929 51 1 39.8071 1 26C1 12.1929 12.1929 1 26 1C39.8071 1 51 12.1929 51 26Z' stroke='#{$btn-close-color}' stroke-width='2'/></svg>");
+
 $btn-border-width: 1px;
 $btn-font-size: 14px;
 $btn-padding-x: 1rem;
