--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -52,7 +52,7 @@
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: Montserrat, sans-serif;
-  --bs-body-font-size: 1rem;
+  --bs-body-font-size: 1.125;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
@@ -99,52 +99,32 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.2;
 }
 
 h1, .h1 {
-  font-size: calc(1.375rem + 1.5vw);
-}
-@media (min-width: 1200px) {
-  h1, .h1 {
-    font-size: 2.5rem;
-  }
+  font-size: 2.8125;
 }
 
 h2, .h2 {
-  font-size: calc(1.325rem + 0.9vw);
-}
-@media (min-width: 1200px) {
-  h2, .h2 {
-    font-size: 2rem;
-  }
+  font-size: 2.25;
 }
 
 h3, .h3 {
-  font-size: calc(1.3rem + 0.6vw);
-}
-@media (min-width: 1200px) {
-  h3, .h3 {
-    font-size: 1.75rem;
-  }
+  font-size: 1.96875;
 }
 
 h4, .h4 {
-  font-size: calc(1.275rem + 0.3vw);
-}
-@media (min-width: 1200px) {
-  h4, .h4 {
-    font-size: 1.5rem;
-  }
+  font-size: 1.6875;
 }
 
 h5, .h5 {
-  font-size: 1.25rem;
+  font-size: 1.40625;
 }
 
 h6, .h6 {
-  font-size: 1rem;
+  font-size: 1.125;
 }
 
 p {
@@ -483,13 +463,13 @@ progress {
 }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.40625;
   font-weight: 300;
 }
 
 .display-1 {
   font-size: calc(1.625rem + 4.5vw);
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -500,7 +480,7 @@ progress {
 
 .display-2 {
   font-size: calc(1.575rem + 3.9vw);
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -511,7 +491,7 @@ progress {
 
 .display-3 {
   font-size: calc(1.525rem + 3.3vw);
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -522,7 +502,7 @@ progress {
 
 .display-4 {
   font-size: calc(1.475rem + 2.7vw);
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -533,7 +513,7 @@ progress {
 
 .display-5 {
   font-size: calc(1.425rem + 2.1vw);
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -544,7 +524,7 @@ progress {
 
 .display-6 {
   font-size: calc(1.375rem + 1.5vw);
-  font-weight: 400;
+  font-weight: 300;
   line-height: 1.2;
 }
 @media (min-width: 1200px) {
@@ -577,7 +557,7 @@ progress {
 
 .blockquote, .wp-block-quote {
   margin-bottom: 1rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
 }
 .blockquote > :last-child, .wp-block-quote > :last-child {
   margin-bottom: 0;
@@ -2162,13 +2142,13 @@ progress {
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
-  font-size: 1.25rem;
+  font-size: 1.40625;
 }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
-  font-size: 0.875rem;
+  font-size: 0.984375;
 }
 
 .form-text {
@@ -2199,7 +2179,7 @@ progress {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1.125;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2564,7 +2544,7 @@ progress {
 .form-control-sm {
   min-height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   border-radius: 0.2rem;
 }
 .form-control-sm::-webkit-file-upload-button {
@@ -2589,7 +2569,7 @@ progress {
 .form-control-lg {
   min-height: calc(1.5em + 1rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
   border-radius: 0.3rem;
 }
 .form-control-lg::-webkit-file-upload-button {
@@ -2644,7 +2624,7 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
-  font-size: 1rem;
+  font-size: 1.125;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2686,19 +2666,19 @@ textarea.form-control-lg {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
 }
 
 .form-select-lg {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
 }
 
 .form-check {
   display: block;
-  min-height: 1.5rem;
+  min-height: 1.6875;
   padding-left: 1.5em;
   margin-bottom: 0.125rem;
 }
@@ -3197,7 +3177,7 @@ textarea.form-control-lg {
   display: flex;
   align-items: center;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 1.125;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -3233,7 +3213,7 @@ textarea.form-control-lg {
 .woocommerce-info .input-group-lg > a.button,
 .woocommerce-notices-wrapper .woocommerce-message .input-group-lg > a.button {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
   border-radius: 0.3rem;
 }
 
@@ -3262,7 +3242,7 @@ textarea.form-control-lg {
 .woocommerce-info .input-group-sm > a.button,
 .woocommerce-notices-wrapper .woocommerce-message .input-group-sm > a.button {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   border-radius: 0.2rem;
 }
 
@@ -3303,7 +3283,7 @@ textarea.form-control-lg {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   color: #ffffff;
   background-color: rgba(25, 135, 84, 0.9);
   border-radius: 0;
@@ -3647,7 +3627,7 @@ textarea.form-control-lg {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   color: #ffffff;
   background-color: rgba(220, 53, 69, 0.9);
   border-radius: 0;
@@ -3991,7 +3971,7 @@ textarea.form-control-lg {
   background-color: transparent;
   border: 1px solid transparent;
   padding: 0.375rem 1rem;
-  font-size: 0.875rem;
+  font-size: 0.875;
   border-radius: 0;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -4466,13 +4446,13 @@ textarea.form-control-lg {
 
 .btn-lg, .btn-group-lg > .btn, .wpcf7 .btn-group-lg > input[type=submit], .woocommerce-info .btn-group-lg > a.button, .woocommerce-notices-wrapper .woocommerce-message .btn-group-lg > a.button {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
   border-radius: 0.3rem;
 }
 
 .btn-sm, .btn-group-sm > .btn, .wpcf7 .btn-group-sm > input[type=submit], .woocommerce-info .btn-group-sm > a.button, .woocommerce-notices-wrapper .woocommerce-message .btn-group-sm > a.button {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   border-radius: 0.2rem;
 }
 
@@ -4544,7 +4524,7 @@ textarea.form-control-lg {
   min-width: 10rem;
   padding: 0.5rem 0;
   margin: 0;
-  font-size: 1rem;
+  font-size: 1.125;
   color: #212529;
   text-align: left;
   list-style: none;
@@ -4779,7 +4759,7 @@ textarea.form-control-lg {
   display: block;
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   color: #6c757d;
   white-space: nowrap;
 }
@@ -5084,10 +5064,10 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.2890625rem;
+  padding-bottom: 0.2890625rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
   text-decoration: none;
   white-space: nowrap;
 }
@@ -5119,7 +5099,7 @@ textarea.form-control-lg {
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
@@ -5705,7 +5685,7 @@ textarea.form-control-lg {
   align-items: center;
   width: 100%;
   padding: 1rem 1.25rem;
-  font-size: 1rem;
+  font-size: 1.125;
   color: #212529;
   text-align: left;
   background-color: #ffffff;
@@ -5894,7 +5874,7 @@ textarea.form-control-lg {
 
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
+  font-size: 1.40625;
 }
 .pagination-lg .page-item:first-child .page-link {
   border-top-left-radius: 0.3rem;
@@ -5907,7 +5887,7 @@ textarea.form-control-lg {
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.984375;
 }
 .pagination-sm .page-item:first-child .page-link {
   border-top-left-radius: 0.2rem;
@@ -6053,7 +6033,7 @@ textarea.form-control-lg {
   display: flex;
   height: 1rem;
   overflow: hidden;
-  font-size: 0.75rem;
+  font-size: 0.84375;
   background-color: #e9ecef;
   border-radius: 0;
 }
@@ -6810,7 +6790,7 @@ textarea.form-control-lg {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   word-wrap: break-word;
   opacity: 0;
 }
@@ -6912,7 +6892,7 @@ textarea.form-control-lg {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.875rem;
+  font-size: 0.984375;
   word-wrap: break-word;
   background-color: #ffffff;
   background-clip: padding-box;
@@ -7006,7 +6986,7 @@ textarea.form-control-lg {
 .popover-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: 1.125;
   background-color: #f0f0f0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   border-top-left-radius: calc(0.3rem - 1px);
@@ -8631,27 +8611,27 @@ textarea.form-control-lg {
 }
 
 .fs-1 {
-  font-size: calc(1.375rem + 1.5vw) !important;
+  font-size: 2.8125 !important;
 }
 
 .fs-2 {
-  font-size: calc(1.325rem + 0.9vw) !important;
+  font-size: 2.25 !important;
 }
 
 .fs-3 {
-  font-size: calc(1.3rem + 0.6vw) !important;
+  font-size: 1.96875 !important;
 }
 
 .fs-4 {
-  font-size: calc(1.275rem + 0.3vw) !important;
+  font-size: 1.6875 !important;
 }
 
 .fs-5 {
-  font-size: 1.25rem !important;
+  font-size: 1.40625 !important;
 }
 
 .fs-6 {
-  font-size: 1rem !important;
+  font-size: 1.125 !important;
 }
 
 .fst-italic {
@@ -12261,23 +12241,6 @@ textarea.form-control-lg {
 
   .text-xxl-center {
     text-align: center !important;
-  }
-}
-@media (min-width: 1200px) {
-  .fs-1 {
-    font-size: 2.5rem !important;
-  }
-
-  .fs-2 {
-    font-size: 2rem !important;
-  }
-
-  .fs-3 {
-    font-size: 1.75rem !important;
-  }
-
-  .fs-4 {
-    font-size: 1.5rem !important;
   }
 }
 @media print {
@@ -15989,7 +15952,7 @@ body.understrap-no-sidebar .wp-block-cover.alignwide {
 
 .wp-block-buttons .wp-block-button .wp-block-button__link {
   padding: 0.375rem 1rem;
-  font-size: 0.875rem;
+  font-size: 0.875;
   border-radius: 0;
 }
 .wp-block-buttons .wp-block-button:not(.is-style-outline) .wp-block-button__link {
