--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -7,7 +7,8 @@ $purple: #5533ff; // Thats a sample how you could change a BootStrap variable.
 $primary: $purple;  // Once we've changed the value, we'll also make it the primary brand color.
 
 $font-family-base: 'Montserrat', sans-serif;
-$display-font-weight: 400;
+$headings-font-weight: 400;
+$font-size-base: 1.125;
 
 $rinrose: #0C2939;
 $rinrose_2: #A6BAC8;
@@ -37,7 +38,7 @@ $btn-close-color: $black;
 $btn-close-bg: url("data:image/svg+xml,<svg width='52' height='52' viewBox='0 0 52 52' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M15 37.5L36.5 16M15 16L36.5 37.5M51 26C51 39.8071 39.8071 51 26 51C12.1929 51 1 39.8071 1 26C1 12.1929 12.1929 1 26 1C39.8071 1 51 12.1929 51 26Z' stroke='#{$btn-close-color}' stroke-width='2'/><path d='M15 37.5L36.5 16M15 16L36.5 37.5M51 26C51 39.8071 39.8071 51 26 51C12.1929 51 1 39.8071 1 26C1 12.1929 12.1929 1 26 1C39.8071 1 51 12.1929 51 26Z' stroke='#{$btn-close-color}' stroke-width='2'/></svg>");
 
 $btn-border-width: 1px;
-$btn-font-size: 14px;
+$btn-font-size: 0.875;
 $btn-padding-x: 1rem;
 $btn-font-weight: 500;
 
