adjusting font size base

--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -8,7 +8,7 @@ $primary: $purple;  // Once we've changed the value, we'll also make it the prim
 
 $font-family-base: 'Montserrat', sans-serif;
 $headings-font-weight: 400;
-$font-size-base: 1.125;
+$font-size-base: 1.125rem;
 
 $rinrose: #0C2939;
 $rinrose_2: #A6BAC8;
