--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -52,7 +52,7 @@
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: Montserrat, sans-serif;
-  --bs-body-font-size: 1.125;
+  --bs-body-font-size: 1.125rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
@@ -104,27 +104,52 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 h1, .h1 {
-  font-size: 2.8125;
+  font-size: calc(1.40625rem + 1.875vw);
+}
+@media (min-width: 1200px) {
+  h1, .h1 {
+    font-size: 2.8125rem;
+  }
 }
 
 h2, .h2 {
-  font-size: 2.25;
+  font-size: calc(1.35rem + 1.2vw);
+}
+@media (min-width: 1200px) {
+  h2, .h2 {
+    font-size: 2.25rem;
+  }
 }
 
 h3, .h3 {
-  font-size: 1.96875;
+  font-size: calc(1.321875rem + 0.8625vw);
+}
+@media (min-width: 1200px) {
+  h3, .h3 {
+    font-size: 1.96875rem;
+  }
 }
 
 h4, .h4 {
-  font-size: 1.6875;
+  font-size: calc(1.29375rem + 0.525vw);
+}
+@media (min-width: 1200px) {
+  h4, .h4 {
+    font-size: 1.6875rem;
+  }
 }
 
 h5, .h5 {
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  h5, .h5 {
+    font-size: 1.40625rem;
+  }
 }
 
 h6, .h6 {
-  font-size: 1.125;
+  font-size: 1.125rem;
 }
 
 p {
@@ -463,8 +488,13 @@ progress {
 }
 
 .lead {
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   font-weight: 300;
+}
+@media (min-width: 1200px) {
+  .lead {
+    font-size: 1.40625rem;
+  }
 }
 
 .display-1 {
@@ -557,7 +587,12 @@ progress {
 
 .blockquote, .wp-block-quote {
   margin-bottom: 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  .blockquote, .wp-block-quote {
+    font-size: 1.40625rem;
+  }
 }
 .blockquote > :last-child, .wp-block-quote > :last-child {
   margin-bottom: 0;
@@ -2142,13 +2177,18 @@ progress {
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  .col-form-label-lg {
+    font-size: 1.40625rem;
+  }
 }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
-  font-size: 0.984375;
+  font-size: 0.984375rem;
 }
 
 .form-text {
@@ -2179,7 +2219,7 @@ progress {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1.125;
+  font-size: 1.125rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2544,7 +2584,7 @@ progress {
 .form-control-sm {
   min-height: calc(1.5em + 0.5rem + 2px);
   padding: 0.25rem 0.5rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   border-radius: 0.2rem;
 }
 .form-control-sm::-webkit-file-upload-button {
@@ -2569,8 +2609,13 @@ progress {
 .form-control-lg {
   min-height: calc(1.5em + 1rem + 2px);
   padding: 0.5rem 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   border-radius: 0.3rem;
+}
+@media (min-width: 1200px) {
+  .form-control-lg {
+    font-size: 1.40625rem;
+  }
 }
 .form-control-lg::-webkit-file-upload-button {
   padding: 0.5rem 1rem;
@@ -2624,7 +2669,7 @@ textarea.form-control-lg {
   width: 100%;
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   -moz-padding-start: calc(0.75rem - 3px);
-  font-size: 1.125;
+  font-size: 1.125rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -2666,19 +2711,24 @@ textarea.form-control-lg {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   padding-left: 0.5rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
 }
 
 .form-select-lg {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  .form-select-lg {
+    font-size: 1.40625rem;
+  }
 }
 
 .form-check {
   display: block;
-  min-height: 1.6875;
+  min-height: 1.6875rem;
   padding-left: 1.5em;
   margin-bottom: 0.125rem;
 }
@@ -3177,7 +3227,7 @@ textarea.form-control-lg {
   display: flex;
   align-items: center;
   padding: 0.375rem 0.75rem;
-  font-size: 1.125;
+  font-size: 1.125rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -3213,8 +3263,36 @@ textarea.form-control-lg {
 .woocommerce-info .input-group-lg > a.button,
 .woocommerce-notices-wrapper .woocommerce-message .input-group-lg > a.button {
   padding: 0.5rem 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   border-radius: 0.3rem;
+}
+@media (min-width: 1200px) {
+  .input-group-lg > .form-control, .wpcf7 .input-group-lg > .wpcf7-validation-errors, .wpcf7 .input-group-lg > input[type=text],
+.wpcf7 .input-group-lg > input[type=search],
+.wpcf7 .input-group-lg > input[type=url],
+.wpcf7 .input-group-lg > input[type=tel],
+.wpcf7 .input-group-lg > input[type=number],
+.wpcf7 .input-group-lg > input[type=range],
+.wpcf7 .input-group-lg > input[type=date],
+.wpcf7 .input-group-lg > input[type=month],
+.wpcf7 .input-group-lg > input[type=week],
+.wpcf7 .input-group-lg > input[type=time],
+.wpcf7 .input-group-lg > input[type=datetime],
+.wpcf7 .input-group-lg > input[type=datetime-local],
+.wpcf7 .input-group-lg > input[type=color],
+.wpcf7 .input-group-lg > input[type=email],
+.wpcf7 .input-group-lg > input[type=file],
+.wpcf7 .input-group-lg > input[type=submit],
+.wpcf7 .input-group-lg > select,
+.wpcf7 .input-group-lg > textarea, .widget_categories .input-group-lg > select,
+.widget_archive .input-group-lg > select,
+.input-group-lg > .form-select,
+.input-group-lg > .input-group-text,
+.input-group-lg > .btn,
+.woocommerce-info .input-group-lg > a.button,
+.woocommerce-notices-wrapper .woocommerce-message .input-group-lg > a.button {
+    font-size: 1.40625rem;
+  }
 }
 
 .input-group-sm > .form-control, .wpcf7 .input-group-sm > .wpcf7-validation-errors, .wpcf7 .input-group-sm > input[type=text],
@@ -3242,7 +3320,7 @@ textarea.form-control-lg {
 .woocommerce-info .input-group-sm > a.button,
 .woocommerce-notices-wrapper .woocommerce-message .input-group-sm > a.button {
   padding: 0.25rem 0.5rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   border-radius: 0.2rem;
 }
 
@@ -3283,7 +3361,7 @@ textarea.form-control-lg {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   color: #ffffff;
   background-color: rgba(25, 135, 84, 0.9);
   border-radius: 0;
@@ -3627,7 +3705,7 @@ textarea.form-control-lg {
   max-width: 100%;
   padding: 0.25rem 0.5rem;
   margin-top: 0.1rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   color: #ffffff;
   background-color: rgba(220, 53, 69, 0.9);
   border-radius: 0;
@@ -4446,13 +4524,18 @@ textarea.form-control-lg {
 
 .btn-lg, .btn-group-lg > .btn, .wpcf7 .btn-group-lg > input[type=submit], .woocommerce-info .btn-group-lg > a.button, .woocommerce-notices-wrapper .woocommerce-message .btn-group-lg > a.button {
   padding: 0.5rem 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   border-radius: 0.3rem;
+}
+@media (min-width: 1200px) {
+  .btn-lg, .btn-group-lg > .btn, .wpcf7 .btn-group-lg > input[type=submit], .woocommerce-info .btn-group-lg > a.button, .woocommerce-notices-wrapper .woocommerce-message .btn-group-lg > a.button {
+    font-size: 1.40625rem;
+  }
 }
 
 .btn-sm, .btn-group-sm > .btn, .wpcf7 .btn-group-sm > input[type=submit], .woocommerce-info .btn-group-sm > a.button, .woocommerce-notices-wrapper .woocommerce-message .btn-group-sm > a.button {
   padding: 0.25rem 0.5rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   border-radius: 0.2rem;
 }
 
@@ -4524,7 +4607,7 @@ textarea.form-control-lg {
   min-width: 10rem;
   padding: 0.5rem 0;
   margin: 0;
-  font-size: 1.125;
+  font-size: 1.125rem;
   color: #212529;
   text-align: left;
   list-style: none;
@@ -4759,7 +4842,7 @@ textarea.form-control-lg {
   display: block;
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   color: #6c757d;
   white-space: nowrap;
 }
@@ -5067,9 +5150,14 @@ textarea.form-control-lg {
   padding-top: 0.2890625rem;
   padding-bottom: 0.2890625rem;
   margin-right: 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   text-decoration: none;
   white-space: nowrap;
+}
+@media (min-width: 1200px) {
+  .navbar-brand {
+    font-size: 1.40625rem;
+  }
 }
 .navbar-nav {
   display: flex;
@@ -5099,12 +5187,17 @@ textarea.form-control-lg {
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 0;
   transition: box-shadow 0.15s ease-in-out;
+}
+@media (min-width: 1200px) {
+  .navbar-toggler {
+    font-size: 1.40625rem;
+  }
 }
 @media (prefers-reduced-motion: reduce) {
   .navbar-toggler {
@@ -5685,7 +5778,7 @@ textarea.form-control-lg {
   align-items: center;
   width: 100%;
   padding: 1rem 1.25rem;
-  font-size: 1.125;
+  font-size: 1.125rem;
   color: #212529;
   text-align: left;
   background-color: #ffffff;
@@ -5874,7 +5967,12 @@ textarea.form-control-lg {
 
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  .pagination-lg .page-link {
+    font-size: 1.40625rem;
+  }
 }
 .pagination-lg .page-item:first-child .page-link {
   border-top-left-radius: 0.3rem;
@@ -5887,7 +5985,7 @@ textarea.form-control-lg {
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
 }
 .pagination-sm .page-item:first-child .page-link {
   border-top-left-radius: 0.2rem;
@@ -6033,7 +6131,7 @@ textarea.form-control-lg {
   display: flex;
   height: 1rem;
   overflow: hidden;
-  font-size: 0.84375;
+  font-size: 0.84375rem;
   background-color: #e9ecef;
   border-radius: 0;
 }
@@ -6790,7 +6888,7 @@ textarea.form-control-lg {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   word-wrap: break-word;
   opacity: 0;
 }
@@ -6892,7 +6990,7 @@ textarea.form-control-lg {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.984375;
+  font-size: 0.984375rem;
   word-wrap: break-word;
   background-color: #ffffff;
   background-clip: padding-box;
@@ -6986,7 +7084,7 @@ textarea.form-control-lg {
 .popover-header {
   padding: 0.5rem 1rem;
   margin-bottom: 0;
-  font-size: 1.125;
+  font-size: 1.125rem;
   background-color: #f0f0f0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   border-top-left-radius: calc(0.3rem - 1px);
@@ -8611,27 +8709,27 @@ textarea.form-control-lg {
 }
 
 .fs-1 {
-  font-size: 2.8125 !important;
+  font-size: calc(1.40625rem + 1.875vw) !important;
 }
 
 .fs-2 {
-  font-size: 2.25 !important;
+  font-size: calc(1.35rem + 1.2vw) !important;
 }
 
 .fs-3 {
-  font-size: 1.96875 !important;
+  font-size: calc(1.321875rem + 0.8625vw) !important;
 }
 
 .fs-4 {
-  font-size: 1.6875 !important;
+  font-size: calc(1.29375rem + 0.525vw) !important;
 }
 
 .fs-5 {
-  font-size: 1.40625 !important;
+  font-size: calc(1.265625rem + 0.1875vw) !important;
 }
 
 .fs-6 {
-  font-size: 1.125 !important;
+  font-size: 1.125rem !important;
 }
 
 .fst-italic {
@@ -12241,6 +12339,27 @@ textarea.form-control-lg {
 
   .text-xxl-center {
     text-align: center !important;
+  }
+}
+@media (min-width: 1200px) {
+  .fs-1 {
+    font-size: 2.8125rem !important;
+  }
+
+  .fs-2 {
+    font-size: 2.25rem !important;
+  }
+
+  .fs-3 {
+    font-size: 1.96875rem !important;
+  }
+
+  .fs-4 {
+    font-size: 1.6875rem !important;
+  }
+
+  .fs-5 {
+    font-size: 1.40625rem !important;
   }
 }
 @media print {
