--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -44,27 +44,52 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 h1, .h1 {
-  font-size: 2.8125;
+  font-size: calc(1.40625rem + 1.875vw);
+}
+@media (min-width: 1200px) {
+  h1, .h1 {
+    font-size: 2.8125rem;
+  }
 }
 
 h2, .h2 {
-  font-size: 2.25;
+  font-size: calc(1.35rem + 1.2vw);
+}
+@media (min-width: 1200px) {
+  h2, .h2 {
+    font-size: 2.25rem;
+  }
 }
 
 h3, .h3 {
-  font-size: 1.96875;
+  font-size: calc(1.321875rem + 0.8625vw);
+}
+@media (min-width: 1200px) {
+  h3, .h3 {
+    font-size: 1.96875rem;
+  }
 }
 
 h4, .h4 {
-  font-size: 1.6875;
+  font-size: calc(1.29375rem + 0.525vw);
+}
+@media (min-width: 1200px) {
+  h4, .h4 {
+    font-size: 1.6875rem;
+  }
 }
 
 h5, .h5 {
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  h5, .h5 {
+    font-size: 1.40625rem;
+  }
 }
 
 h6, .h6 {
-  font-size: 1.125;
+  font-size: 1.125rem;
 }
 
 p {
@@ -449,7 +474,7 @@ progress {
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: Montserrat, sans-serif;
-  --bs-body-font-size: 1.125;
+  --bs-body-font-size: 1.125rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
@@ -681,8 +706,13 @@ progress {
 }
 
 .lead {
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
   font-weight: 300;
+}
+@media (min-width: 1200px) {
+  .lead {
+    font-size: 1.40625rem;
+  }
 }
 
 .display-1 {
@@ -775,7 +805,12 @@ progress {
 
 .blockquote, .wp-block-quote {
   margin-bottom: 1rem;
-  font-size: 1.40625;
+  font-size: calc(1.265625rem + 0.1875vw);
+}
+@media (min-width: 1200px) {
+  .blockquote, .wp-block-quote {
+    font-size: 1.40625rem;
+  }
 }
 .blockquote > :last-child, .wp-block-quote > :last-child {
   margin-bottom: 0;
@@ -1132,7 +1167,7 @@ body.understrap-no-sidebar .wp-block-cover.alignwide {
 }
 
 .editor-post-title .editor-post-title__input {
-  font-size: 2.8125;
+  font-size: 2.8125rem;
   font-weight: 400;
 }
 
