--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -50,3 +50,26 @@ $btn-border-width: 1px;
 $btn-font-size: 0.875;
 $btn-padding-x: 1rem;
 $btn-font-weight: 500;
+
+$utilities: (
+  	"width": (
+    	property: width,
+    	responsive: true,
+    	class: w,
+    	values: (
+        	10: 10%,
+        	20: 20%,
+        	25: 25%,
+        	30: 30%,
+        	40: 40%,
+        	50: 50%,
+        	60: 60%,
+        	70: 70%,
+        	75: 75%,
+        	80: 80%,
+        	90: 80%,
+        	100: 100%,
+        	auto: auto
+      	)
+    ),
+);
