--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -59,3 +59,7 @@ ul#rinrose_header-offcanvas_body-nav {
         }
     }
 }
+
+#rinrose_home-amenities_footer-image {
+    transform: translateX($spacer * -5);
+}
