--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -16035,7 +16035,7 @@ ul#rinrose_header-offcanvas_body-nav .menu-item a {
 }
 
 #rinrose_home-amenities_footer-image {
-  transform: translateX(-5rem);
+  transform: translateY(-5rem);
 }
 
 .has-blue-color,
