--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -61,5 +61,5 @@ ul#rinrose_header-offcanvas_body-nav {
 }
 
 #rinrose_home-amenities_footer-image {
-    transform: translateX($spacer * -5);
+    transform: translateY($spacer * -5);
 }
