--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -73,4 +73,23 @@ $utilities: (
         	auto: auto
       	)
     ),
+    "viewport-height": (
+      	property: height,
+      	responsive: true,
+      	class: vh,
+      	values: (
+      		10: 10vh,
+        	20: 20vh,
+        	25: 25vh,
+        	30: 30vh,
+        	40: 40vh,
+        	50: 50vh,
+        	60: 60vh,
+        	70: 70vh,
+        	75: 75vh,
+        	80: 80vh,
+        	90: 80vh,
+      		100: 100vh
+      	)
+    ),
 );
