--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -8142,6 +8142,50 @@ textarea.form-control-lg {
   max-height: 100% !important;
 }
 
+.vh-10 {
+  height: 10vh !important;
+}
+
+.vh-20 {
+  height: 20vh !important;
+}
+
+.vh-25 {
+  height: 25vh !important;
+}
+
+.vh-30 {
+  height: 30vh !important;
+}
+
+.vh-40 {
+  height: 40vh !important;
+}
+
+.vh-50 {
+  height: 50vh !important;
+}
+
+.vh-60 {
+  height: 60vh !important;
+}
+
+.vh-70 {
+  height: 70vh !important;
+}
+
+.vh-75 {
+  height: 75vh !important;
+}
+
+.vh-80 {
+  height: 80vh !important;
+}
+
+.vh-90 {
+  height: 80vh !important;
+}
+
 .vh-100 {
   height: 100vh !important;
 }
@@ -9223,6 +9267,54 @@ textarea.form-control-lg {
     width: auto !important;
   }
 
+  .vh-sm-10 {
+    height: 10vh !important;
+  }
+
+  .vh-sm-20 {
+    height: 20vh !important;
+  }
+
+  .vh-sm-25 {
+    height: 25vh !important;
+  }
+
+  .vh-sm-30 {
+    height: 30vh !important;
+  }
+
+  .vh-sm-40 {
+    height: 40vh !important;
+  }
+
+  .vh-sm-50 {
+    height: 50vh !important;
+  }
+
+  .vh-sm-60 {
+    height: 60vh !important;
+  }
+
+  .vh-sm-70 {
+    height: 70vh !important;
+  }
+
+  .vh-sm-75 {
+    height: 75vh !important;
+  }
+
+  .vh-sm-80 {
+    height: 80vh !important;
+  }
+
+  .vh-sm-90 {
+    height: 80vh !important;
+  }
+
+  .vh-sm-100 {
+    height: 100vh !important;
+  }
+
   .flex-sm-fill {
     flex: 1 1 auto !important;
   }
@@ -9924,6 +10016,54 @@ textarea.form-control-lg {
 
   .w-md-auto {
     width: auto !important;
+  }
+
+  .vh-md-10 {
+    height: 10vh !important;
+  }
+
+  .vh-md-20 {
+    height: 20vh !important;
+  }
+
+  .vh-md-25 {
+    height: 25vh !important;
+  }
+
+  .vh-md-30 {
+    height: 30vh !important;
+  }
+
+  .vh-md-40 {
+    height: 40vh !important;
+  }
+
+  .vh-md-50 {
+    height: 50vh !important;
+  }
+
+  .vh-md-60 {
+    height: 60vh !important;
+  }
+
+  .vh-md-70 {
+    height: 70vh !important;
+  }
+
+  .vh-md-75 {
+    height: 75vh !important;
+  }
+
+  .vh-md-80 {
+    height: 80vh !important;
+  }
+
+  .vh-md-90 {
+    height: 80vh !important;
+  }
+
+  .vh-md-100 {
+    height: 100vh !important;
   }
 
   .flex-md-fill {
@@ -10629,6 +10769,54 @@ textarea.form-control-lg {
     width: auto !important;
   }
 
+  .vh-lg-10 {
+    height: 10vh !important;
+  }
+
+  .vh-lg-20 {
+    height: 20vh !important;
+  }
+
+  .vh-lg-25 {
+    height: 25vh !important;
+  }
+
+  .vh-lg-30 {
+    height: 30vh !important;
+  }
+
+  .vh-lg-40 {
+    height: 40vh !important;
+  }
+
+  .vh-lg-50 {
+    height: 50vh !important;
+  }
+
+  .vh-lg-60 {
+    height: 60vh !important;
+  }
+
+  .vh-lg-70 {
+    height: 70vh !important;
+  }
+
+  .vh-lg-75 {
+    height: 75vh !important;
+  }
+
+  .vh-lg-80 {
+    height: 80vh !important;
+  }
+
+  .vh-lg-90 {
+    height: 80vh !important;
+  }
+
+  .vh-lg-100 {
+    height: 100vh !important;
+  }
+
   .flex-lg-fill {
     flex: 1 1 auto !important;
   }
@@ -11332,6 +11520,54 @@ textarea.form-control-lg {
     width: auto !important;
   }
 
+  .vh-xl-10 {
+    height: 10vh !important;
+  }
+
+  .vh-xl-20 {
+    height: 20vh !important;
+  }
+
+  .vh-xl-25 {
+    height: 25vh !important;
+  }
+
+  .vh-xl-30 {
+    height: 30vh !important;
+  }
+
+  .vh-xl-40 {
+    height: 40vh !important;
+  }
+
+  .vh-xl-50 {
+    height: 50vh !important;
+  }
+
+  .vh-xl-60 {
+    height: 60vh !important;
+  }
+
+  .vh-xl-70 {
+    height: 70vh !important;
+  }
+
+  .vh-xl-75 {
+    height: 75vh !important;
+  }
+
+  .vh-xl-80 {
+    height: 80vh !important;
+  }
+
+  .vh-xl-90 {
+    height: 80vh !important;
+  }
+
+  .vh-xl-100 {
+    height: 100vh !important;
+  }
+
   .flex-xl-fill {
     flex: 1 1 auto !important;
   }
@@ -12033,6 +12269,54 @@ textarea.form-control-lg {
 
   .w-xxl-auto {
     width: auto !important;
+  }
+
+  .vh-xxl-10 {
+    height: 10vh !important;
+  }
+
+  .vh-xxl-20 {
+    height: 20vh !important;
+  }
+
+  .vh-xxl-25 {
+    height: 25vh !important;
+  }
+
+  .vh-xxl-30 {
+    height: 30vh !important;
+  }
+
+  .vh-xxl-40 {
+    height: 40vh !important;
+  }
+
+  .vh-xxl-50 {
+    height: 50vh !important;
+  }
+
+  .vh-xxl-60 {
+    height: 60vh !important;
+  }
+
+  .vh-xxl-70 {
+    height: 70vh !important;
+  }
+
+  .vh-xxl-75 {
+    height: 75vh !important;
+  }
+
+  .vh-xxl-80 {
+    height: 80vh !important;
+  }
+
+  .vh-xxl-90 {
+    height: 80vh !important;
+  }
+
+  .vh-xxl-100 {
+    height: 100vh !important;
   }
 
   .flex-xxl-fill {
