--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -65,3 +65,8 @@ ul#rinrose_header-offcanvas_body-nav {
 #rinrose_home_amenities_body-right_content {
     transform: translateY(-100%);
 }
+div#rinrose_home-residences_banner {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
