--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -50,7 +50,9 @@ $btn-close-bg: url("data:image/svg+xml,<svg width='52' height='52' viewBox='0 0 
 $btn-border-width: 1px;
 $btn-font-size: 0.875;
 $btn-padding-x: 2rem;
+$btn-padding-y: 0.875rem;
 $btn-font-weight: 500;
+$btn-line-height: 1em;
 
 $utilities: (
   	"width": (
