--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -4036,7 +4036,7 @@ textarea.form-control-lg {
 .btn, .wpcf7 input[type=submit], .woocommerce-info a.button, .woocommerce-notices-wrapper .woocommerce-message a.button {
   display: inline-block;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 1em;
   color: #212529;
   text-align: center;
   text-decoration: none;
@@ -4048,7 +4048,7 @@ textarea.form-control-lg {
   user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: 0.375rem 2rem;
+  padding: 0.875rem 2rem;
   font-size: 0.875;
   border-radius: 0;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -16660,7 +16660,7 @@ body.understrap-no-sidebar .wp-block-cover.alignwide {
 }
 
 .wp-block-buttons .wp-block-button .wp-block-button__link {
-  padding: 0.375rem 2rem;
+  padding: 0.875rem 2rem;
   font-size: 0.875;
   border-radius: 0;
 }
