--- a/src/sass/theme/_child_theme_variables.scss
+++ b/src/sass/theme/_child_theme_variables.scss
@@ -9,6 +9,14 @@ $primary: $purple;  // Once we've changed the value, we'll also make it the prim
 $font-family-base: 'Montserrat', sans-serif;
 $headings-font-weight: 400;
 $font-size-base: 1.125rem;
+$font-weight-lighter: lighter;
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-lightbold: 500;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
+$font-weight-bolder: bolder;
+
 
 $display-font-sizes: (
   1: 3.9rem,
@@ -92,6 +100,19 @@ $utilities: (
         	80: 80vh,
         	90: 80vh,
       		100: 100vh
+      	)
+    ),
+    "font-weight": (
+    	property: font-weight,
+    	class: fw,
+    	values: (
+        	light: $font-weight-light,
+        	lighter: $font-weight-lighter,
+        	normal: $font-weight-normal,
+        	bold: $font-weight-bold,
+        	semibold: $font-weight-semibold,
+        	bolder: $font-weight-bolder,
+        	lightbold: $font-weight-lightbold,
       	)
     ),
 );
